--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -83,8 +83,11 @@ apps:
       HOME: $SNAP_USER_COMMON
       LIBGL_DEBUG: verbose
     plugs:
-      - network
       - desktop
-      - x11
-      - wayland
+      - joystick
+      - network
       - opengl
+      - pulseaudio
+      - steam-support
+      - wayland
+      - x11
