cleaned up stage packages

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -76,78 +76,61 @@ parts:
     build-packages:
       - dpkg-dev
     stage-packages:
+      - curl
       - file
+      - libasound2:amd64
+      - libasound2:i386
+      - libasound2-plugins:amd64
+      - libasound2-plugins:i386
+      - libbsd0:i386
+      - libc6:i386
+      - libcurl4:i386
+      - libdrm2:i386
+      - libgcc1:i386
+      - libgdk-pixbuf2.0-0:i386
+      - libgl1:amd64
+      - libgl1:i386
+      - libgl1-mesa-dri:amd64
+      - libgl1-mesa-dri:i386
+      - libglib2.0-0:i386
+      - libglx-mesa0:amd64
+      - libglx-mesa0:i386
+      - libgtk2.0-0:i386
+      - libmagic1
+      - libnotify4
+      - libopenal1:amd64
+      - libopenal1:i386
+      - libopengl0:amd64
+      - libopengl0:i386
+      - libpulse0:amd64
+      - libpulse0:i386
+      - libstdc++6:i386
+      - libva2:amd64
+      - libva2:i386
+      - libva-wayland2:amd64
+      - libva-wayland2:i386
+      - libva-x11-2:amd64
+      - libva-x11-2:i386
+      - libvdpau1:amd64
+      - libvdpau1:i386
+      - libvulkan1:amd64
+      - libvulkan1:i386
+      - libx11-6:i386
+      - libxau6:i386
+      - libxcb1:i386
+      - libxdmcp6:i386
+      - libxrandr2:i386
+      - libxtst6:i386
+      - locales-all
+      - mesa-vdpau-drivers:amd64
+      - mesa-vdpau-drivers:i386
+      - mesa-vulkan-drivers:amd64
+      - mesa-vulkan-drivers:i386
       - pciutils
+      - va-driver-all:amd64
+      - va-driver-all:i386
       - xz-utils
       - zenity
-      - libasound2
-      - libasound2-plugins
-      - libbsd0
-      - libc6
-      - libcurl4
-      - libdrm2
-      - libfreetype6
-      - libgcc1
-      - libgdk-pixbuf2.0-0
-      - libgl1
-      - libgl1-mesa-dri
-      - libglib2.0-0
-      - libglx-mesa0
-      - libgnutls30
-      - libgtk2.0-0
-      - libopenal1
-      - libopengl0
-      - libpulse0
-      - libstdc++6
-      - libva2
-      - libva-wayland2
-      - libva-x11-2
-      - libvdpau1
-      - libvulkan1
-      - libx11-6
-      - libxau6
-      - libxcb1
-      - libxdmcp6
-      - libxrandr2
-      - libxtst6
-      - mesa-vdpau-drivers
-      - mesa-vulkan-drivers
-      - va-driver-all
-      - on amd64:
-          - libasound2:i386
-          - libasound2-plugins:i386
-          - libbsd0:i386
-          - libc6:i386
-          - libcurl4:i386
-          - libdrm2:i386
-          - libfreetype6:i386
-          - libgcc1:i386
-          - libgdk-pixbuf2.0-0:i386
-          - libgl1:i386
-          - libgl1-mesa-dri:i386
-          - libglib2.0-0:i386
-          - libglx-mesa0:i386
-          - libgnutls30:i386
-          - libgtk2.0-0:i386
-          - libopenal1:i386
-          - libopengl0:i386
-          - libpulse0:i386
-          - libstdc++6:i386
-          - libva2:i386
-          - libva-wayland2:i386
-          - libva-x11-2:i386
-          - libvdpau1:i386
-          - libvulkan1:i386
-          - libx11-6:i386
-          - libxau6:i386
-          - libxcb1:i386
-          - libxdmcp6:i386
-          - libxrandr2:i386
-          - libxtst6:i386
-          - mesa-vdpau-drivers:i386
-          - mesa-vulkan-drivers:i386
-          - va-driver-all:i386
-
     override-build: |
       # Set the snap version from the .deb package version
       snapcraftctl set-version $(dpkg-parsechangelog -l usr/share/doc/steam-launcher/changelog.all.gz -S Version | sed -e s/1://g)
@@ -173,6 +156,7 @@ apps:
       - desktop
       - wayland
       - x11
+      - gsettings
       - hardware-observe
       - joystick
       - network
