--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -45,6 +45,18 @@ layout:
     bind: $SNAP/usr/share/alsa
   /usr/share/vulkan:
     bind: $SNAP/usr/share/vulkan
+  /usr/lib/i386-linux-gnu/libvulkan_intel.so:
+    bind-file: $SNAP/usr/lib/i386-linux-gnu/libvulkan_intel.so
+  /usr/lib/x86_64-linux-gnu/libvulkan_intel.so:
+    bind-file: $SNAP/usr/lib/x86_64-linux-gnu/libvulkan_intel.so
+  /usr/lib/i386-linux-gnu/libvulkan_lvp.so:
+    bind-file: $SNAP/usr/lib/i386-linux-gnu/libvulkan_lvp.so
+  /usr/lib/x86_64-linux-gnu/libvulkan_lvp.so:
+    bind-file: $SNAP/usr/lib/x86_64-linux-gnu/libvulkan_lvp.so
+  /usr/lib/i386-linux-gnu/libvulkan_radeon.so:
+    bind-file: $SNAP/usr/lib/i386-linux-gnu/libvulkan_radeon.so
+  /usr/lib/x86_64-linux-gnu/libvulkan_radeon.so:
+    bind-file: $SNAP/usr/lib/x86_64-linux-gnu/libvulkan_radeon.so
 
 plugs:
   gtk-3-themes:
@@ -121,7 +133,7 @@ parts:
       deb [arch=amd64,i386] http://repo.steampowered.com/steam/ stable steam
       deb-src [arch=amd64,i386] http://repo.steampowered.com/steam/ stable steam
       EOF
-      #apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F24AEA9FB05498B7
+      apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F24AEA9FB05498B7
       apt-key add $SNAPCRAFT_PROJECT_DIR/src/valve-archive-keyring.gpg
 
       if [ "$SNAPCRAFT_ARCH_TRIPLET" = "x86_64-linux-gnu" ]; then
@@ -137,94 +149,20 @@ parts:
       - dpkg-dev
     stage-packages:
       - steam-launcher
-      - ca-certificates
-      - curl
-      - curl:i386
-      - file
-      - file:i386
-      - fontconfig:amd64
-      - fontconfig:i386
-      - fonts-liberation:amd64
-      - fonts-liberation:i386
-      - i965-va-driver:i386
-      - i965-va-driver-shaders:i386
-      - intel-media-va-driver:i386
-      - intel-media-va-driver-non-free:i386
-      - libasound2:amd64
-      - libasound2:i386
-      - libasound2-plugins:amd64
-      - libasound2-plugins:i386
-      - libbsd0:i386
-      - libc6:i386
-      - libcurl4:i386
-      - libdrm2:i386
-      - libegl1:i386
-      - libgbm1:i386
-      - libgcc1:i386
-      - libgcc-s1:i386
-      - libgdk-pixbuf2.0-0:i386
-      - libgl1:amd64
-      - libgl1:i386
-      - libgl1-mesa-dri:amd64
-      - libgl1-mesa-dri:i386
-      - libgl1-mesa-glx:amd64
-      - libgl1-mesa-glx:i386
-      - libglib2.0-0:i386
-      - libglx-mesa0:amd64
-      - libglx-mesa0:i386
-      - libgpg-error0:i386
-      - libgtk2.0-0:i386
-      - libmagic1
-      - libnotify4
-      - libopenal1:amd64
-      - libopenal1:i386
-      - libopengl0:amd64
-      - libopengl0:i386
-      - libpulse0:amd64
-      - libpulse0:i386
-      - libsdl2-2.0-0:i386
-      - libstdc++6:i386
-      - libudev1:i386
-      - libva2:amd64
-      - libva2:i386
-      - libva-wayland2:amd64
-      - libva-wayland2:i386
-      - libva-x11-2:amd64
-      - libva-x11-2:i386
-      - libvdpau1:amd64
-      - libvdpau1:i386
-      - libvulkan1:amd64
-      - libvulkan1:i386
-      - libx11-6:i386
-      - libxau6:i386
-      - libxcb1:i386
-      - libxcb-dri3-0:i386
-      - libxdmcp6:i386
-      - libxi6:i386
-      - libxinerama1:i386
-      - libxrandr2:i386
-      - libxss1:i386
-      - libxtst6:i386
-      - locales-all
+      - steam-libs-amd64
+      - steam-libs-i386
+      - libappindicator3-1
+      - libvkd3d1:i386
+      - libvkd3d1:amd64
       - mesa-va-drivers:i386
       - mesa-vdpau-drivers:amd64
       - mesa-vdpau-drivers:i386
       - mesa-vulkan-drivers:amd64
       - mesa-vulkan-drivers:i386
-      - pciutils
-      - steam-devices:i386
       - va-driver-all:amd64
       - va-driver-all:i386
       - va-driver:i386
-      - xdg-utils:amd64
-      - xdg-utils:i386
-      - xterm:amd64
-      - xterm:i386
-      - xz-utils
-      - xz-utils:i386
-      - zenity
-      - zenity:i386
-      - libappindicator3-1
+      - xdg-utils
 
     override-build: |
       snapcraftctl build
