Added steam-support plug and assumes snapd2.55.4

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,7 +11,7 @@ architectures:
   - build-on: amd64
 base: core20
 assumes:
-  - snapd2.55.2
+  - snapd2.55.4
 
 layout:
   /usr/lib/steam:
@@ -225,3 +225,4 @@ apps:
       - bluez
       - network-control
       - fuse-support
+      - steam-support
