fix audio playback in the Steam webview
Added two additional libraries to the alsa-mixin
- libsndfile
- libasyncns (which is marked as unsatisfied dependency during snap build)

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -117,11 +117,13 @@ parts:
       - usr/bin/yad*
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/alsa-lib
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libasound*
+      - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libasyncns*
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libdnsfile*
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libFLAC*
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libjack*
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libpulse*
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libsamplerate*
+      - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libsndfile*
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libspeex*
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libvorbis*
       - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/pulseaudio
