Added build dep needed for LP builds

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -148,6 +148,7 @@ parts:
     #source: http://repo.steampowered.com/steam/archive/precise/steam_latest.deb
     build-packages:
       - dpkg-dev
+      - dirmngr # Needed for launchpad builds
     stage-packages:
       - steam-launcher
       - steam-libs-amd64
